NetworkPolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devops-networkpolicy
spec:
  ingress:
  - from:
    - ipBlock: 
       cidr: 10.244.1.188/32
    ports:
    - port: 80
  podSelector:
    matchLabels:
      team: devops
